Feat/proposal feature (#92)
* add proposal backend logic

* add proposal backend logic

* add proposal features in front, basic UI/UX

* add style for the views about proposals
